# NETKIT

./: .gitignore  Makefile  README.md  com.jservo.netdash.plist  pyproject.toml  server.py
.github/workflows/: build.yml
docs/: API.md  ARCHITECTURE.md  TROUBLESHOOTING.md
netkit/: __init__.py  index.html  ledger.py  probes.py  server.py
packaging/: com.jservo.netkit.plist  netkit.service
swiftbar-plugins/: netdash.5m.sh
tools/: build_pyz.py
